src/styles/components/_platform_selector.sass
.platform_selector
  margin-bottom: 25px
  margin-top: 25px

.platform_selector--content
  padding: 25px
  display: block
  width: 100%
  clear: both
  background-color: lighten(#32526a, 6%)
  border-bottom: 1px solid #32526a


.platform_selector--tabs
  list-style-type: none
  margin: 0px
  padding: 0px

  @media only screen and (max-width: $breakpoint-med)
    border-bottom: 0px

  li.active
    background-color: lighten(#32526a, 6%)

  li
    display: inline-block
    cursor: pointer
    background-color: #32526a
    padding: 8px 18px
    margin-right: 4px
    border-radius: 4px
    border-bottom-left-radius: 0px
    border-bottom-right-radius: 0px


    @media only screen and (max-width: $breakpoint-med)
      display: block
      border-bottom-left-radius: 4px
      border-bottom-right-radius: 4px
      margin-bottom: 3px
      margin-right: 0px

